Fix tooltip being hidden behind buttons in Badge-Giver

--- a/timApp/static/scripts/tim/gamification/badge/badge-giver.component.scss
+++ b/timApp/static/scripts/tim/gamification/badge/badge-giver.component.scss
@@ -153,7 +153,7 @@ button:disabled {
   background-color: #ccc;
   color: #777;
   cursor: not-allowed;
-  opacity: 0.6;
+  //opacity: 0.6;
 }
 
 #cancelButton {
